--- a/felix-and-hervert.html
+++ b/felix-and-hervert.html
@@ -17,12 +17,12 @@
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m313-480 155 156q11 11 11.5 27.5T468-268q-11 11-28 11t-28-11L228-452q-6-6-8.5-13t-2.5-15q0-8 2.5-15t8.5-13l184-184q11-11 27.5-11.5T468-692q11 11 11 28t-11 28L313-480Zm264 0 155 156q11 11 11.5 27.5T732-268q-11 11-28 11t-28-11L492-452q-6-6-8.5-13t-2.5-15q0-8 2.5-15t8.5-13l184-184q11-11 27.5-11.5T732-692q11 11 11 28t-11 28L577-480Z"/></svg>
         </button>
       </li>
-      <li class="active">
+      <li>
         <a href="https://ula406.github.io/scrath.games/index.html">
           <span>Inici</span>
         </a>
       </li>
-      <li>
+      <li class="active">
         <a href="https://ula406.github.io/scrath.games/felix-and-hervert.html">
         <span>Felix and Hervert</span>
         </a>
@@ -41,8 +41,8 @@
   </nav>
   <main>
       <div style="width: 95%" class="card">
-        <h2>Aquí podeu trobar tots els meus jocs que he fet a l'optativa de Game&Code</h2>
-        <p>De moment, alguns jocs no estan acabats i no apareixen a la pàgina web actualment, estic treballant molt fort per aconseguir-ho</p>
+        <h2>Felix and Hervert</h2>
+        <iframe src="https://scratch.mit.edu/projects/1083336227/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       </div>
   </main>
 </body>
